Bug 244418 - Ktorrent fails to create directories automatically.
Summary: Ktorrent fails to create directories automatically.
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR major
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
: 248438 250286 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-07-12 18:32 UTC by dE
Modified: 2010-09-06 17:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dE 2010-07-12 18:32:16 UTC
Version:           unspecified (using KDE 4.4.4) 
OS:                Linux

In a torrent where there're folders, you have to manually create the folder tree for ktorrent to make it not show an error.

Version 3.3.4

This appears to be a major bug.

Reproducible: Always

Steps to Reproduce:
Download Sabayon Linux torrent and see.
Comment 1 Joris Guisson 2010-07-12 19:52:51 UTC
SVN commit 1149138 by guisson:

Ensure that torrent names are not interpreted as directories

BUG: 244418

 M  +1 -0      ChangeLog  
 M  +0 -16     src/diskio/multifilecache.cpp  
 M  +4 -0      src/diskio/singlefilecache.cpp  
 M  +14 -6     src/torrent/torrent.cpp  
 M  +1 -0      src/util/file.cpp  
 M  +27 -0     src/util/fileops.cpp  
 M  +8 -0      src/util/fileops.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1149138
Comment 2 dE 2010-07-14 10:02:50 UTC
Was that for me?
Comment 3 Joris Guisson 2010-08-21 09:37:47 UTC
*** Bug 248438 has been marked as a duplicate of this bug. ***
Comment 4 dE 2010-08-21 12:09:50 UTC
Are we resolving this soon? This is a major bug.
Comment 5 Joris Guisson 2010-08-21 12:15:48 UTC
It is already resolved, why do you think the bug status is RESOLVED FIXED ?

Fix will be part of 4.1.
Comment 6 dE 2010-08-22 06:53:40 UTC
Oh, I didn't see that.

Thanks for fixing.
Comment 7 Joris Guisson 2010-09-06 17:54:23 UTC
*** Bug 250286 has been marked as a duplicate of this bug. ***