Ensure that torrent names are not interpreted as directories

BUG: 244418

svn path=/trunk/extragear/network/libktorrent/; revision=1149138