src/util/file.cpp
@@ -46,6 +46,7 @@ namespace bt
 		this->file = file;
 		if (fptr)
 			close();
+		
 #ifdef HAVE_FOPEN64
 		fptr = fopen64(QFile::encodeName(file),mode.toAscii().constData());
 #else
